k8s/apps/immich/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-postgres
  namespace: immich
  labels:
    app.kubernetes.io/name: immich-postgres
    app.kubernetes.io/part-of: immich
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: immich-postgres
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: immich-postgres
        app.kubernetes.io/part-of: immich
    spec:
      containers:
        - name: postgres
          image: ghcr.io/immich-app/postgres:14-vectorchord0.4.3-pgvectors0.2.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: postgres
              containerPort: 5432
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
          readinessProbe:
            exec:
              command:
                - pg_isready
                - --dbname=immich
                - --username=immich
            initialDelaySeconds: 10
            periodSeconds: 10
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: immich-postgres
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-redis
  namespace: immich
  labels:
    app.kubernetes.io/name: immich-redis
    app.kubernetes.io/part-of: immich
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: immich-redis
  template:
    metadata:
      labels:
        app.kubernetes.io/name: immich-redis
        app.kubernetes.io/part-of: immich
    spec:
      containers:
        - name: redis
          image: docker.io/valkey/valkey:8-bookworm
          imagePullPolicy: IfNotPresent
          args:
            - valkey-server
            - --save
            - ""
            - --appendonly
            - "no"
          ports:
            - name: redis
              containerPort: 6379
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /data
          readinessProbe:
            exec:
              command:
                - valkey-cli
                - ping
            initialDelaySeconds: 5
            periodSeconds: 10
      volumes:
        - name: data
          emptyDir: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-machine-learning
  namespace: immich
  labels:
    app.kubernetes.io/name: immich-machine-learning
    app.kubernetes.io/part-of: immich
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: immich-machine-learning
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: immich-machine-learning
        app.kubernetes.io/part-of: immich
    spec:
      containers:
        - name: machine-learning
          image: ghcr.io/immich-app/immich-machine-learning:release
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3003
              protocol: TCP
          volumeMounts:
            - name: cache
              mountPath: /cache
          readinessProbe:
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
      volumes:
        - name: cache
          persistentVolumeClaim:
            claimName: immich-machine-learning-cache
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-server
  namespace: immich
  labels:
    app.kubernetes.io/name: immich-server
    app.kubernetes.io/part-of: immich
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: immich-server
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: immich-server
        app.kubernetes.io/part-of: immich
    spec:
      containers:
        - name: server
          image: ghcr.io/immich-app/immich-server:release
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 2283
              protocol: TCP
          # volumeMounts:
          #   - name: upload
          #     mountPath: /usr/src/app/upload
          readinessProbe:
            httpGet:
              path: /api/server/ping
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
      # volumes:
      #   - name: upload
      #     nfs:
      #       server: 192.168.2.116
      #       path: /mnt/Volume/Files/Media/Photos/Immich
      #       readOnly: false
