k8s/apps/immich/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-postgres
  namespace: immich
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: immich-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: immich-redis
  namespace: immich
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: immich-redis
  ports:
    - name: redis
      port: 6379
      targetPort: redis
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: immich-machine-learning
  namespace: immich
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: immich-machine-learning
  ports:
    - name: http
      port: 3003
      targetPort: http
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: immich-server
  namespace: immich
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: immich-server
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
